<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/new_countdown"
    android:background="@color/grey">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:gravity="center"
        android:text="@string/new_countdown"
        android:textColor="@color/white"
        android:textSize="35sp"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/datePicker"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="220dp"
        android:textColor="@color/white"
        android:background="@drawable/rounded_corners"
        android:hint="@string/selectDate_new"
        android:textColorHint="@color/text_grey"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/titleEditText"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="310dp"
        android:hint="@string/title_new"
        android:textColor="@color/white"
        android:background="@drawable/rounded_corners"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/text_grey"
        android:textSize="15sp"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/addButton"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="420dp"
        android:background="@drawable/button_custom"
        android:text="@string/addCountdown_new"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>